*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
***************************************************/

2010-11-09 [B] Fixed language detection {eenemeenemuu}
2010-11-08 [A] Made fully compatible to cpg1.5.x {eenemeenemuu}
2010-11-08 [M] Added halnat's version to svn repository {eenemeenemuu}
2009-12-20 [M] Initial release for CPG 1.5.x {halnat}
2009-11-03 [M] Release of plugin MiniCMS {GauGau}
2009-11-03 [M] Removal of reference to cpg-contrib.org because site is down {GauGau}
2009-11-03 [M] Added MiniCMS to SVN repository of coppermine project {GauGau}
2009-11-03 [M] Removed reference to versions in file headers for easier maintenance of code base {GauGau}
2009-11-03 [A] Added German language file {GauGau}
2009-11-03 [M] Streamlined configuration screen {GauGau}
2009-11-03 [O] Renamed readme and changelog files {GauGau}
2009-11-03 [M] Reversed changelog order to match Coppermine guidelines {GauGau}
2009-11-03 [M] Counted plugin version up to 2.0 {GauGau}
2009-10-29 [M] Released plugin v1.8.1 {i-imagine}
2009-10-29 [M] Upgraded to FCKEditor 2.6.5 {i-imagine}
200?-??-?? [M] Released plugin v1.7 {Donnoman}
200?-??-?? [B] Changed it so that new MiniCMS articles aren't created until they are saved {Donnoman}
200?-??-?? [B] Fixed Issue with Bridged Installations {Donnoman}
200?-??-?? [A] Added the real content title of the first cms article to the html header on the cms page {Donnoman}
200?-??-?? [B] Eliminated the unbound minicms edit box when veiwing a specific article {Donnoman}
200?-??-?? [B] Eliminated automatic preview {Donnoman}
200?-??-?? [C] Moved the preview to be above the editor, on the editor page {Donnoman}