@@ -18,8 +18,8 @@
 $name = 'Album Share Codes';
 $description = 'Adds share codes to the album view page (thumbnail.php).';
 $author = '<a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=24278" rel="external" class="external">eenemeenemuu</a>';
-$version = '0.1';
-$plugin_cpg_version = array('min' => '1.5');
+$version = '1.0';
+$plugin_cpg_version = array('min' => '1.5.10');
 $extra_info = $install_info = '<a href="http://forum.coppermine-gallery.net/index.php/topic,65779.0.html" rel="external" class="admin_menu">'.cpg_fetch_icon('announcement', 1).$lang_plugin_custom_thumb['announcement_thread'].'</a>';
 
 ?>
