@@ -20,9 +20,11 @@
 
 $name='MiniCMS';
 $description='MiniCMS provides a small content management system within the Coppermine Picture Gallery application that enables the admin to add textual content to existing coppermine pages and to add new pages with the look and feel of the existing ones.';
-$author='Donnoman@donovanbray.com';
+$author='Created for cpg1.4.x by Donnoman@donovanbray.com';
+$author.='<br />Initial release for cpg1.5.x by <a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=41609" rel="external" class="external">halnat</a>.'
+$author.='<br />Made fully compatible to cpg1.5.x by <a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=24278" rel="external" class="external">eenemeenemuu</a>';
 $version='2.0';
-$plugin_cpg_version = array('min' => '1.5');
+$plugin_cpg_version = array('min' => '1.5.10');
 
 $lang = isset($CONFIG['lang']) ? $CONFIG['lang'] : 'english';
 include('plugins/minicms/lang/english.php');
