@@ -19,6 +19,6 @@ $name='Video to Flash Plugin';
 $description='This plugin will convert the uploaded video file to flash video (flv) and will also create video thumbnails. The flv file will then be played using JW flash player on displayimage page. <br /><b>This plugin requires that ffmpeg (with mp3 support) to be installed on the server.';
 $author='<a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=11737">Abbas Ali</a>';
 $version='1.1';
-$plugin_cpg_version = array('min' => '1.5');
+$plugin_cpg_version = array('min' => '1.5.10');
 $extra_info='<a href="index.php?file=video2flash_ffmpeg/settings">Configure Plugin</a>';
 ?>
